# netflix_profile

./: README.md  manage.py  pyproject.toml
netflix_profile/: asgi.py  settings.py  urls.py  wsgi.py
netflix_profile/profiles/: models.py  serializers.py  views.py
netflix_profile/profiles/migrations/: 0001_initial.py
